[package]
name = "sonant"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
license = "MIT"
categories = ["embedded", "game-engines", "multimedia", "no-std"]
keywords = ["audio", "no_std", "sound", "synth", "synthesizer"]

[dependencies]
arrayvec = { version = "0.4", default-features = false }
byteorder = { version = "1.2", default-features = false }
failure = { version = "0.1", optional = true }
failure_derive = { version = "0.1", optional = true }
libm = "0.1"
rand = { version = "0.5", default-features = false }

[dev-dependencies]
colored = "1.6"
cpal = "0.8"
riff-wave = "0.1"

[features]
default = ["std"]
std = ["failure", "failure_derive"]
