[package]
name = "sonant"
description = "A Rust port of the Sonant 4K synth with streaming support."
repository = "https://github.com/parasyte/sonant-rs"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
license = "MIT"
categories = ["embedded", "game-engines", "multimedia", "no-std"]
keywords = ["audio", "no_std", "sound", "synth", "synthesizer"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.5", default-features = false }
byteorder = { version = "1.2", default-features = false }
libm = "0.1"
randomize = "3.0"
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
colored = "1.6"
cpal = "0.10"
getrandom = "0.1"
riff-wave = "0.1"

[features]
default = ["std"]
std = ["thiserror"]
