[package]
name = "sonant"
description = "A Rust port of the Sonant 4K synth with streaming support."
repository = "https://github.com/parasyte/sonant-rs"
version = "0.2.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
readme = "README.md"
license = "MIT"
categories = ["embedded", "game-engines", "multimedia", "no-std"]
keywords = ["audio", "no_std", "sound", "synth", "synthesizer"]
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
byteorder = { version = "1", default-features = false }
libm = "0.2"
randomize = "5"
thiserror = { version = "1", optional = true }

[dev-dependencies]
colored = "2"
cpal = "0.15"
error-iter = "0.4"
getrandom = "0.2"
riff-wave = "0.1"

[features]
default = ["std"]
std = ["thiserror"]
